--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- HEADER -->
-    <!-- <div class="header">
+    <div class="header">
         <h1 class="titulo">Happy<span class="mundo">End</span></h1>
         <div class="nav-links">
             <a href="#apresentacoes">Apresentações</a>
@@ -40,9 +40,8 @@
             <a href="#projetos">Projetos</a>
             <a href="#professores">Professores</a>
         </div>
-        <button class="share-button"><img class="partilhar" src="../images/compartilhar.png"
-                alt="Botão compartilhar">Compartilhar</button>
-    </div> -->
+
+    </div>
 
     <!-- TITULO -->
     <div class="texto">
