--- a/pages/index.html
+++ b/pages/index.html
@@ -32,8 +32,8 @@
 
 
     <!-- HEADER -->
-    <div class="header">
-        <h1 class="titulo">Happy<span class="mundo">End</span></h1>
+    <div class="marginPagina header">
+        <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
         <div class="nav-links">
             <a href="#apresentacoes">Apresentações</a>
             <a href="#turmas">Turmas</a>
@@ -41,15 +41,24 @@
             <a href="#professores">Professores</a>
         </div>
 
+        <button class="btnShare">
+            <img src="../images/compartilhar.png" class="icon">
+            <p id="txtShare">Compartilhar</p>
+
+        </button>
     </div>
 
-    <!-- TITULO -->
-    <div class="texto">
-        <p class="principal">O <span class="word"> ÚLTIMO</span> PROJETO</p>
-        <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe <br> SENAI - Ferraz de Vasconcelos
-        </p>
-    </div>
+    <main class="marginPagina">
+        <!-- TITULO -->
+        <div class="landingTitle">
+            <p class="principal">O <span class="word"> ÚLTIMO</span> PROJETO</p>
+            <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe <br> SENAI - Ferraz de
+                Vasconcelos
+            </p>
+        </div>
 
+
+    </main>
 
 </body>
 
