--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- HEADER -->
-    <div class="marginPagina header">
+    <div class="header">
         <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
         <div class="nav-links">
             <a href="#apresentacoes">Apresentações</a>
@@ -41,10 +41,9 @@
             <a href="#professores">Professores</a>
         </div>
 
-        <button class="btnShare">
+        <button class="btn btnShare">
             <img src="../images/compartilhar.png" class="icon">
-            <p id="txtShare">Compartilhar</p>
-
+            <p class="txtBtn" id="txtShare">Compartilhar</p>
         </button>
     </div>
 
@@ -55,8 +54,36 @@
             <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe <br> SENAI - Ferraz de
                 Vasconcelos
             </p>
+
+            <br><br>
+
+            <button class="btn">
+                <img src="../images/compartilhar.png" class="icon">
+                <p class="txtBtn">Saiba Mais</p>
+            </button>
         </div>
 
+
+
+
+        <section id="location">
+            <div id="locationInfo">
+                <h2 id="ourLocationTitle">Dias 03 e 06 de Dezembro</h2>
+                <p class="text27">SENAI - Luis Eulalio de Bueno Vidigal Filho
+                </p>
+                <button class="btn">
+                    <img src="../images/compartilhar.png" class="icon">
+                    <p class="txtBtn">See Location</p>
+                </button>
+            </div>
+
+            <div id="locationMap">
+                <iframe id="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2119.2147188867466!2d-72.93474536237494!3d41.30838072596151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e7d9b2ead4c849%3A0x9498d8b81e55fcaf!2sYale%20School%20of%20Art!5e0!3m2!1spt-BR!2sbr!4v1723464077880!5m2!1spt-BR!2sbr"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
 
     </main>
 
