--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/estrelas.css">
     <link rel="stylesheet" href="../css/indexResponsivo.css">
-    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <title>HappyEnd - Bem-Vindo</title>
 </head>
 
@@ -57,9 +56,9 @@
 
             <br><br>
 
-            <button class="btn">
-                <img src="../images/compartilhar.png" class="icon">
-                <p class="txtBtn">Saiba Mais</p>
+            <button class="btn" id="btnSaibaMais">
+                <div class="iconSaibaMais"></div>
+                <p class="txtBtn" id="txtSaibaMais">Saiba Mais</p>
             </button>
         </div>
 
