--- a/pages/index.html
+++ b/pages/index.html
@@ -78,7 +78,7 @@
 
             <div id="locationMap">
                 <iframe id="map"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2119.2147188867466!2d-72.93474536237494!3d41.30838072596151!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e7d9b2ead4c849%3A0x9498d8b81e55fcaf!2sYale%20School%20of%20Art!5e0!3m2!1spt-BR!2sbr!4v1723464077880!5m2!1spt-BR!2sbr"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.711929526581!2d-46.35987492462665!3d-23.5428612788125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce7aceb279709b%3A0x75f9237d480a9c89!2sSESI%20-%20Ferraz%20de%20Vasconcelos!5e0!3m2!1spt-BR!2sbr!4v1726498586023!5m2!1spt-BR!2sbr"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
