base calendar + removal fontInter

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,7 +48,7 @@
 
     <main class="marginPagina">
         <!-- TITULO -->
-        <div class="landingTitle">
+        <section class="landingTitle">
             <p class="principal">O <span class="word"> ÚLTIMO</span> PROJETO</p>
             <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe <br> SENAI - Ferraz de
                 Vasconcelos
@@ -60,11 +60,53 @@
                 <div class="iconSaibaMais"></div>
                 <p class="txtBtn" id="txtSaibaMais">Saiba Mais</p>
             </button>
-        </div>
+        </section>
+
+        <!-- calendário datas eventos -->
+        <section class="calendarBase">
+            <div class="titleSection">
+                <p>Dias de</p>
+                <h1 class="poppinsBold">Apresentação</h1>
+            </div>
+
+            <div class="calendarContainer">
+                <div class="calendarBox">
+                <div class="boxSalaCalendar">
+                    <h3>3ºA</h3>
+                </div>
+
+                <div>
+                    <h1 class="principal calendarTitle">04</h1>
+                    <p>De dezembro</p>
+                </div>
+
+                <button class="btn">
+                    <img src="../images/compartilhar.png" class="icon">
+                    <p class="txtBtn">Agendar Evento</p>
+                </button>
+            </div>
+
+            <div class="calendarBox">
+                <div class="boxSalaCalendar">
+                    <h3>3ºB</h3>
+                </div>
+                <div>
+                    <h1 class="principal calendarTitle">06</h1>
+                    <p>De dezembro</p>
+                </div>
+
+                <button class="btn">
+                    <img src="../images/compartilhar.png" class="icon">
+                    <p class="txtBtn">Agendar Evento</p>
+                </button>
+            </div>
+            </div>
+
+        </section>
 
 
 
-
+        <!-- localização -->
         <section id="location">
             <div id="locationInfo">
                 <h2 id="ourLocationTitle">Dias 03 e 06 de Dezembro</h2>
