inicio SVG calendar

--- a/pages/index.html
+++ b/pages/index.html
@@ -62,44 +62,58 @@
             </button>
         </section>
 
+
         <!-- calendário datas eventos -->
         <section class="calendarBase">
+
             <div class="titleSection">
                 <p>Dias de</p>
+
+
+                <svg class="linhasSVG" width="100%" height="20">
+                    <!-- Linhas ao redor do título -->
+                    <line x1="0%" y1="0" x2="40%" y2="0" style="stroke:#fff;stroke-width:2" />
+                    <line x1="60%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
+                </svg>
+
                 <h1 class="poppinsBold">Apresentação</h1>
             </div>
 
             <div class="calendarContainer">
                 <div class="calendarBox">
-                <div class="boxSalaCalendar">
-                    <h3>3ºA</h3>
+                    <div class="boxSalaCalendar">
+                        <h3>3ºA</h3>
+                    </div>
+
+                    <div>
+                        <h1 class="principal calendarTitle">04</h1>
+                        <p>De dezembro</p>
+                    </div>
+
+                    <button class="btn">
+                        <img src="../images/compartilhar.png" class="icon">
+                        <p class="txtBtn">Agendar Evento</p>
+                    </button>
                 </div>
 
-                <div>
-                    <h1 class="principal calendarTitle">04</h1>
-                    <p>De dezembro</p>
-                </div>
 
-                <button class="btn">
-                    <img src="../images/compartilhar.png" class="icon">
-                    <p class="txtBtn">Agendar Evento</p>
-                </button>
-            </div>
 
-            <div class="calendarBox">
-                <div class="boxSalaCalendar">
-                    <h3>3ºB</h3>
-                </div>
-                <div>
-                    <h1 class="principal calendarTitle">06</h1>
-                    <p>De dezembro</p>
-                </div>
 
-                <button class="btn">
-                    <img src="../images/compartilhar.png" class="icon">
-                    <p class="txtBtn">Agendar Evento</p>
-                </button>
-            </div>
+                <div class="calendarBox">
+                    <div class="boxSalaCalendar">
+                        <h3>3ºB</h3>
+                    </div>
+                    <div>
+                        <h1 class="principal calendarTitle">06</h1>
+                        <p>De dezembro</p>
+                    </div>
+
+                    <button class="btn">
+                        <img src="../images/compartilhar.png" class="icon">
+                        <p class="txtBtn">Agendar Evento</p>
+                    </button>
+
+                </div>
             </div>
 
         </section>
