--- a/pages/index.html
+++ b/pages/index.html
@@ -71,7 +71,7 @@
 
 
                 <svg class="linhasSVG" width="100%" height="20">
-                    <!-- Linhas ao redor do título -->
+                    <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
                     <line x1="0%" y1="0" x2="40%" y2="0" style="stroke:#fff;stroke-width:2" />
                     <line x1="60%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
                 </svg>
