--- a/pages/index.html
+++ b/pages/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <button class="btn btnShare">
-            <img src="../images/compartilhar.png" class="icon">
+            <img src="../images/icons/compartilhar.png" class="icon">
             <p class="txtBtn" id="txtShare">Compartilhar</p>
         </button>
     </div>
@@ -80,18 +80,18 @@
             </div>
 
             <div class="calendarContainer">
-                <div class="calendarBox">
+                <div class="calendarBox calendarBoxLeft">
                     <div class="boxSalaCalendar">
                         <h3>3ºA</h3>
                     </div>
 
                     <div>
                         <h1 class="principal calendarTitle">04</h1>
-                        <p>De dezembro</p>
+                        <h3>De Dezembro</h3>
                     </div>
 
                     <button class="btn">
-                        <img src="../images/compartilhar.png" class="icon">
+                        <img src="../images/icons/iconCalendario.png" class="icon">
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
                 </div>
@@ -99,17 +99,17 @@
 
 
 
-                <div class="calendarBox">
+                <div class="calendarBox calendarBoxRight">
                     <div class="boxSalaCalendar">
                         <h3>3ºB</h3>
                     </div>
                     <div>
                         <h1 class="principal calendarTitle">06</h1>
-                        <p>De dezembro</p>
+                        <h3>De Dezembro</h3>
                     </div>
 
                     <button class="btn">
-                        <img src="../images/compartilhar.png" class="icon">
+                        <img src="../images/icons/iconCalendario.png" class="icon">
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
 
@@ -124,7 +124,7 @@
         <section id="location">
             <div id="locationInfo">
                 <h2 id="ourLocationTitle">Dias 03 e 06 de Dezembro</h2>
-                <p class="text27">SENAI - Luis Eulalio de Bueno Vidigal Filho
+                <p class="text27">SESI CE240 - Ferraz de Vasconcelos
                 </p>
                 <button class="btn">
                     <img src="../images/compartilhar.png" class="icon">
