--- a/pages/index.html
+++ b/pages/index.html
@@ -40,8 +40,8 @@
             <a href="#professores">Professores</a>
         </div>
 
-        <button class="btn btnShare">
-            <img src="../images/icons/compartilhar.png" class="icon">
+        <button class="btnShare">
+            <img src="../images/icons/compartilhar.png" class="icon iconShare">
             <p class="txtBtn" id="txtShare">Compartilhar</p>
         </button>
     </div>
@@ -67,7 +67,7 @@
         <section class="calendarBase">
 
             <div class="titleSection">
-                <p>Dias de</p>
+                <p class="tituloInfo">Informações sobre</p>
 
 
                 <svg class="linhasSVG" width="100%" height="20">
@@ -82,16 +82,18 @@
             <div class="calendarContainer">
                 <div class="calendarBox calendarBoxLeft">
                     <div class="boxSalaCalendar">
-                        <h3>3ºA</h3>
+                        <h3 class="classe">3ºA</h3>
                     </div>
 
                     <div>
-                        <h1 class="principal calendarTitle">04</h1>
-                        <h3>De Dezembro</h3>
+                        <h1 class="data">04</h1>
+                        <div class="mes">
+                            <h3 class="dezembro">De Dezembro</h3>
+                        </div>
                     </div>
 
                     <button class="btn">
-                        <img src="../images/icons/iconCalendario.png" class="icon">
+                        <img src="../images/icons/iconCalendario.png" class="iconCalendario" >
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
                 </div>
@@ -101,15 +103,17 @@
 
                 <div class="calendarBox calendarBoxRight">
                     <div class="boxSalaCalendar">
-                        <h3>3ºB</h3>
+                        <h3 class="classe">3ºB</h3>
                     </div>
                     <div>
-                        <h1 class="principal calendarTitle">06</h1>
-                        <h3>De Dezembro</h3>
+                        <h1 class="data">06</h1>
+                        <div class="mes">
+                            <h3 class="dezembro">De Dezembro</h3>
+                        </div>
                     </div>
 
                     <button class="btn">
-                        <img src="../images/icons/iconCalendario.png" class="icon">
+                        <img src="../images/icons/iconCalendario.png" class="iconCalendario">
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
 
