alinhamento title com svg usando px

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,10 @@
         <section class="calendarBase">
 
             <div class="titleSection">
-                <p class="tituloInfo">Informações sobre</p>
+                <div class="titleSVG-align">
+                    <p class="tituloInfo">Informações sobre</p>
+                </div>
+
 
 
                 <svg class="linhasSVG" width="100%" height="20">
@@ -76,7 +79,10 @@
                     <line x1="60%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
                 </svg>
 
-                <h1 class="poppinsBold">Apresentação</h1>
+                <div class="titleSVG-align">
+                    <h1 class="poppinsBold">Apresentação</h1>
+                </div>
+
             </div>
 
             <div class="calendarContainer">
@@ -93,7 +99,7 @@
                     </div>
 
                     <button class="btn">
-                        <img src="../images/icons/iconCalendario.png" class="iconCalendario" >
+                        <img src="../images/icons/iconCalendario.png" class="iconInvert">
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
                 </div>
@@ -113,7 +119,7 @@
                     </div>
 
                     <button class="btn">
-                        <img src="../images/icons/iconCalendario.png" class="iconCalendario">
+                        <img src="../images/icons/iconCalendario.png" class="iconInvert">
                         <p class="txtBtn">Agendar Evento</p>
                     </button>
 
@@ -131,7 +137,7 @@
                 <p class="text27">SESI CE240 - Ferraz de Vasconcelos
                 </p>
                 <button class="btn">
-                    <img src="../images/compartilhar.png" class="icon">
+                    <img src="../images/icons/iconLocal.png" class="iconInvert">
                     <p class="txtBtn">See Location</p>
                 </button>
             </div>
