inicio linhasVerticais SVG

--- a/pages/index.html
+++ b/pages/index.html
@@ -73,10 +73,16 @@
 
 
 
-                <svg class="linhasSVG" width="100%" height="20">
+                <svg class="linhasSVG linhasSVG-horizontal" width="100%" height="20">
                     <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
                     <line x1="0%" y1="0" x2="40%" y2="0" style="stroke:#fff;stroke-width:2" />
                     <line x1="60%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2" />
+                </svg>
+                <svg class="linhasSVG linhasSVG-vertical" width="100%" height="100">
+                    <!-- Linha vertical no lado esquerdo -->
+                    <line x1="0%" y1="0" x2="0%" y2="100" style="stroke:#fff;stroke-width:2" />
+                    <!-- Linha vertical no lado direito -->
+                    <line x1="100%" y1="0" x2="100%" y2="100" style="stroke:#fff;stroke-width:2" />
                 </svg>
 
                 <div class="titleSVG-align">
