--- a/pages/index.html
+++ b/pages/index.html
@@ -141,13 +141,66 @@
                     <line x1="0%" y1="100%" x2="100%" y2="100%" style="stroke:#fff;stroke-width:2" />
                 </svg>
             </div>
-
-
-
-
-
         </section>
 
+
+
+        <!-- professores homenagem -->
+        <section>
+            <h1 class="titleSVG-align poppinsBold">Professores</h1>
+
+            <div class="professoresContainer">
+
+                <div class="professor">
+                    <img class="imgProfessor" src="../images/templateProfessor.png">
+
+                    <div class="infoBox-professor">
+                        <div class="infos-professor">
+                            <p class="txtBtn">Juliana Carvalho</p>
+
+                            <a href="https://www.linkedin.com/school/senaisp/posts/?feedView=all" target="_blank"
+                                class="socialsProfessor">
+                                <p>Saiba Mais</p>
+                                <img src="../images/icons/arrow.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="professor">
+                    <img class="imgProfessor" src="../images/templateProfessor.png">
+
+                    <div class="infoBox-professor">
+                        <div class="infos-professor">
+                            <p class="txtBtn">Marcos Vinicius</p>
+
+                            <a href="https://www.linkedin.com/school/senaisp/posts/?feedView=all" target="_blank"
+                                class="socialsProfessor">
+                                <p>Saiba Mais</p>
+                                <img src="../images/icons/arrow.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="professor">
+                    <img class="imgProfessor" src="../images/templateProfessor.png">
+
+                    <div class="infoBox-professor">
+                        <div class="infos-professor">
+                            <p class="txtBtn">Marcelo Alves</p>
+
+                            <a href="https://www.linkedin.com/school/senaisp/posts/?feedView=all" target="_blank"
+                                class="socialsProfessor">
+                                <p>Saiba Mais</p>
+                                <img src="../images/icons/arrow.png">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
 
 
@@ -181,7 +234,8 @@
             <div>
                 <h1>Happy<span class="red">End</span></h1>
 
-                <p class="txtFooterMarginTop">Transformando ideias em soluções digitais. Prepare-se para o<br>Projeto final da primeira Turma de
+                <p class="txtFooterMarginTop">Transformando ideias em soluções digitais. Prepare-se para o<br>Projeto
+                    final da primeira Turma de
                     Desenvolvimento de Sistemas.</p>
 
                 <p class="poppinsLight">- Turma SENAI - Ferraz de Vasconceloz 2024</p>
@@ -215,7 +269,8 @@
                 </a>
 
 
-                <a class="socialIcon" href="https://www.linkedin.com/school/senaisp/posts/?feedView=all" target="_blank">
+                <a class="socialIcon" href="https://www.linkedin.com/school/senaisp/posts/?feedView=all"
+                    target="_blank">
                     <img src="../images/icons/linkedin.png">
                 </a>
 
