--- a/pages/index.html
+++ b/pages/index.html
@@ -34,10 +34,10 @@
     <div class="header">
         <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
         <div class="nav-links">
-            <a href="#apresentacoes">Apresentações</a>
-            <a href="#turmas">Turmas</a>
-            <a href="#projetos">Projetos</a>
-            <a href="#professores">Professores</a>
+            <a href="#apresentacoes">Datas</a>
+            <a href="#turmas">Projetos</a>
+            <a href="#projetos">Professores</a>
+            <a href="#professores">Localização</a>
         </div>
 
         <button class="btnShare">
@@ -227,10 +227,10 @@
                 <p class="poppinsLight">Seções</p>
 
                 <div class="nav-links footerLinks">
-                    <a href="#apresentacoes">Apresentações</a>
-                    <a href="#turmas">Turmas</a>
-                    <a href="#projetos">Projetos</a>
-                    <a href="#professores">Professores</a>
+                    <a href="#apresentacoes">Datas</a>
+                    <a href="#turmas">Projetos</a>
+                    <a href="#projetos">Professores</a>
+                    <a href="#professores">Localização</a>
                 </div>
             </div>
         </div>
