inicio responsividade total

--- a/pages/index.html
+++ b/pages/index.html
@@ -33,7 +33,7 @@
     <!-- HEADER -->
     <div class="header">
         <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
-        <div class="nav-links">
+        <div class="nav-links nav-linksHeader">
             <a href="#apresentacoes">Datas</a>
             <a href="#turmas">Projetos</a>
             <a href="#projetos">Professores</a>
@@ -50,7 +50,7 @@
         <!-- TITULO -->
         <section class="landingTitle">
             <p class="principal">O <span class="word"> ÚLTIMO</span> PROJETO</p>
-            <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe <br> SENAI - Ferraz de
+            <p class="subtitulo">Prepare-se para a apresentação final da primeira equipe SENAI - Ferraz de
                 Vasconcelos
             </p>
 
@@ -196,7 +196,7 @@
                 </p>
                 <button class="btn">
                     <img src="../images/icons/iconLocal.png" class="iconInvert">
-                    <p class="txtBtn">See Location</p>
+                    <p class="txtBtn">Copiar Endereço</p>
                 </button>
             </div>
 
@@ -240,7 +240,7 @@
         <div class="marginPagina footerSection">
             <p>© SENAI Luis Eulalio de Bueno Vidigal Filho</p>
 
-            <div class="iconsSocials nav-links">
+            <div class="nav-links iconsSocials ">
                 <a class="socialIcon" href="https://www.facebook.com/senaisp.suzano/" target="_blank">
                     <img src="../images/icons/facebook.png">
                 </a>
