--- a/pages/index.html
+++ b/pages/index.html
@@ -220,7 +220,7 @@
                     final da primeira Turma de
                     Desenvolvimento de Sistemas.</p>
 
-                <p class="poppinsLight">- Turma SENAI - Ferraz de Vasconceloz 2024</p>
+                <p class="poppinsLight">- Turma SENAI - Ferraz de Vasconcelos 2024</p>
             </div>
 
             <div class="nav-footer">
