a href scroll funcional

--- a/pages/index.html
+++ b/pages/index.html
@@ -34,10 +34,10 @@
     <div class="header">
         <h1 class="tituloHeader">Happy<span class="red">End</span></h1>
         <div class="nav-links nav-linksHeader">
-            <a href="#apresentacoes">Datas</a>
-            <a href="#turmas">Projetos</a>
-            <a href="#projetos">Professores</a>
-            <a href="#professores">Localização</a>
+            <a href="#dataEventos-section">Datas</a>
+            <a href="#projetos-section">Projetos</a>
+            <a href="#professores-section">Professores</a>
+            <a href="#location">Localização</a>
         </div>
 
         <button class="btnShare" id="shareButton">
@@ -82,7 +82,7 @@
 
 
         <!-- calendário datas eventos -->
-        <section class="calendarBase">
+        <section id="dataEventos-section" class="calendarBase">
 
             <div class="titleSection">
                 <div class="titleSVG-align">
@@ -162,9 +162,14 @@
         </section>
 
 
+        <!-- projetos -->
+        <section>
+            <h1 class="titleSVG-align poppinsBold">Projetos</h1>
+        </section>
+
 
         <!-- professores homenagem -->
-        <section>
+        <section id="professores-section">
             <h1 class="titleSVG-align poppinsBold">Professores</h1>
 
             <div class="professoresContainer">
@@ -253,10 +258,10 @@
                 <p class="poppinsLight">Seções</p>
 
                 <div class="nav-links footerLinks">
-                    <a href="#apresentacoes">Datas</a>
-                    <a href="#turmas">Projetos</a>
-                    <a href="#projetos">Professores</a>
-                    <a href="#professores">Localização</a>
+                    <a href="#dataEventos-section">Datas</a>
+                    <a href="#projetos-section">Projetos</a>
+                    <a href="#professores-section">Professores</a>
+                    <a href="#location">Localização</a>
                 </div>
             </div>
         </div>
