--- a/pages/index.html
+++ b/pages/index.html
@@ -280,7 +280,7 @@
         </div>
     </footer>
 
-    <script src="../scripts/index.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
