--- a/pages/index.html
+++ b/pages/index.html
@@ -155,8 +155,114 @@
 
 
         <!-- projetos -->
-        <section>
-            <h1 class="titleSVG-align poppinsBold">Projetos</h1>
+        <section id="projetos-section" class="conteiner_projetos">
+
+            <div class="conteiner_titulo">
+
+                <div class="caixa-titulo">
+
+                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" height="100%" width="100%">
+                        <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
+                        <line x1="0%" y1="0" x2="90%" y2="0" style="stroke:#fff;stroke-width:2"></line>
+                        <line x1="0%" y1="0" x2="0" y2="100%" style="stroke:#fff;stroke-width:2"></line>
+                    </svg>
+                    <!-- <line x1="65%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2"></line> -->
+
+                    <h1 class="titleSVG-align poppinsBold">Projetos</h1>
+
+
+                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" width="100%">
+                        <line x1="100%" y1="0" x2="100%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
+                        <line x1="10%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2"></line>
+                    </svg>
+
+                </div>
+
+                <div class="caixa-texto">
+
+                    <svg class="linhasSVG" width="1" height="200">
+                        <!-- Linha vertical no lado direito -->
+                        <line x1="0" y1="0" x2="0" y2="100%" style="stroke:#ffffff;stroke-width:2"></line>
+                    </svg>
+
+                    <div class="textoTitulo">Temos alunos comprometidos em dar o seu melhor em cada projeto</div>
+
+                    <svg class="linhasSVG" width="1" height="200">
+                        <!-- Linha vertical no lado direito -->
+                        <line x1="0" y1="0" x2="0" y2="100%" style="stroke:#ffffff;stroke-width:2"></line>
+                    </svg>
+
+                </div>
+
+            </div>
+
+            <div class="carrossel">
+
+                <div class="slide active">
+
+                    <div class="conteudo_slide">
+
+                        <h1 class="titulo">Integrity</h1>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                            integer
+                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
+                            porttitor risus amet sit id.</p>
+                    </div>
+
+
+                    <img src="../images/imagem1.png" alt="" />
+
+                </div>
+
+                <div class="slide prev">
+
+                    <div class="conteudo_slide">
+
+                        <h1 class="titulo">Integrity</h1>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                            integer
+                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
+                            porttitor risus amet sit id.</p>
+                    </div>
+
+
+                    <img src="../images/imagem2.png" alt="" />
+
+                </div>
+
+                <div class="slide next">
+
+                    <div class="conteudo_slide">
+
+                        <h1 class="titulo">Integrity</h1>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                            integer
+                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
+                            porttitor risus amet sit id.</p>
+                    </div>
+
+
+                    <img src="../images/imagem3.png" alt="" />
+
+                </div>
+
+                <div class="slide out">
+
+                    <div class="conteudo_slide">
+
+                        <h1 class="titulo">Integrity</h1>
+                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                            integer
+                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
+                            porttitor risus amet sit id.</p>
+                    </div>
+
+
+                    <img src="../images/imagem4.png" alt="" />
+
+                </div>
+            </div>
+
         </section>
 
 
