--- a/pages/index.html
+++ b/pages/index.html
@@ -94,7 +94,7 @@
 
 
             <div class="calendarDaysSVG-alignment">
-                <svg class="linhasSVG" width="50" height="550">
+                <svg class="linhasSVG-vertical" width="50" height="550">
                     <!-- Linha vertical no lado esquerdo -->
                     <line x1="0%" y1="0" x2="0%" y2="90%" style="stroke:#fff;stroke-width:2" />
                     <line x1="0%" y1="90%" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
@@ -145,7 +145,7 @@
                 </div>
 
 
-                <svg class="linhasSVG" width="50" height="550">
+                <svg class="linhasSVG linhasSVG-vertical" width="50" height="550">
                     <!-- Linha vertical no lado direito -->
                     <line x1="100%" y1="0" x2="100%" y2="90%" style="stroke:#ffffff;stroke-width:2" />
                     <line x1="0%" y1="90%" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
