title projetos svg solve

--- a/pages/index.html
+++ b/pages/index.html
@@ -147,7 +147,7 @@
 
                 <svg class="linhasSVG linhasSVG-vertical" width="50" height="550">
                     <!-- Linha vertical no lado direito -->
-                    <line x1="100%" y1="0" x2="100%" y2="90%" style="stroke:#ffffff;stroke-width:2" />
+                    <line x1="100%" y1="0" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
                     <line x1="0%" y1="90%" x2="100%" y2="90%" style="stroke:#fff;stroke-width:2" />
                 </svg>
             </div>
@@ -155,27 +155,24 @@
 
 
         <!-- projetos -->
-        <section id="projetos-section" class="conteiner_projetos">
+        <section id="projetos-section" class="calendarBase">
 
             <div class="conteiner_titulo">
 
                 <div class="caixa-titulo">
-
                     <svg class="linhasSVG linhasSVG-horizontal-carrossel" height="100%" width="100%">
-                        <!-- SVGs funcionam através de coordenadas xy inicio - xy fim -->
-                        <line x1="0%" y1="0" x2="90%" y2="0" style="stroke:#fff;stroke-width:2"></line>
-                        <line x1="0%" y1="0" x2="0" y2="100%" style="stroke:#fff;stroke-width:2"></line>
+
+                        <line x1="0%" y1="0%" x2="90%" y2="0%" style="stroke:#fff;stroke-width:2"></line>
+                        <line x1="0%" y1="0%" x2="0%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
                     </svg>
-                    <!-- <line x1="65%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2"></line> -->
 
                     <h1 class="titleSVG-align poppinsBold">Projetos</h1>
 
+                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" height="100%" width="100%">
 
-                    <svg class="linhasSVG linhasSVG-horizontal-carrossel" width="100%">
-                        <line x1="100%" y1="0" x2="100%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
-                        <line x1="10%" y1="0" x2="100%" y2="0" style="stroke:#fff;stroke-width:2"></line>
+                        <line x1="10%" y1="0%" x2="100%" y2="0%" style="stroke:#fff;stroke-width:2"></line>
+                        <line x1="100%" y1="0%" x2="100%" y2="100%" style="stroke:#fff;stroke-width:2"></line>
                     </svg>
-
                 </div>
 
                 <div class="caixa-texto">
@@ -185,7 +182,7 @@
                         <line x1="0" y1="0" x2="0" y2="100%" style="stroke:#ffffff;stroke-width:2"></line>
                     </svg>
 
-                    <div class="textoTitulo">Temos alunos comprometidos em dar o seu melhor em cada projeto</div>
+                    <div class="textoTitulo">Conheça projetos inovadores de nossos alunos</div>
 
                     <svg class="linhasSVG" width="1" height="200">
                         <!-- Linha vertical no lado direito -->
