base responsividade carrossel

--- a/pages/index.html
+++ b/pages/index.html
@@ -193,72 +193,79 @@
 
             </div>
 
-            <div class="carrossel">
+            <div class="carrosselContainer">
+                <div class="carrossel">
 
-                <div class="slide active">
+                    <div class="slide active">
 
-                    <div class="conteudo_slide">
+                        <div class="conteudo_slide">
 
-                        <h1 class="titulo">Integrity</h1>
-                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                            integer
-                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
-                            porttitor risus amet sit id.</p>
+                            <h1 class="titulo">Integrity</h1>
+                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                                integer
+                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
+                                Est
+                                porttitor risus amet sit id.</p>
+                        </div>
+
+
+                        <img src="../images/imagem1.png" alt="" />
+
                     </div>
 
+                    <div class="slide prev">
 
-                    <img src="../images/imagem1.png" alt="" />
+                        <div class="conteudo_slide">
 
-                </div>
+                            <h1 class="titulo">Integrity</h1>
+                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                                integer
+                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
+                                Est
+                                porttitor risus amet sit id.</p>
+                        </div>
 
-                <div class="slide prev">
 
-                    <div class="conteudo_slide">
+                        <img src="../images/imagem2.png" alt="" />
 
-                        <h1 class="titulo">Integrity</h1>
-                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                            integer
-                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
-                            porttitor risus amet sit id.</p>
                     </div>
 
+                    <div class="slide next">
 
-                    <img src="../images/imagem2.png" alt="" />
+                        <div class="conteudo_slide">
 
-                </div>
+                            <h1 class="titulo">Integrity</h1>
+                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                                integer
+                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
+                                Est
+                                porttitor risus amet sit id.</p>
+                        </div>
 
-                <div class="slide next">
 
-                    <div class="conteudo_slide">
+                        <img src="../images/imagem3.png" alt="" />
 
-                        <h1 class="titulo">Integrity</h1>
-                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                            integer
-                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
-                            porttitor risus amet sit id.</p>
                     </div>
 
+                    <div class="slide out">
 
-                    <img src="../images/imagem3.png" alt="" />
+                        <div class="conteudo_slide">
 
-                </div>
+                            <h1 class="titulo">Integrity</h1>
+                            <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
+                                integer
+                                ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc.
+                                Est
+                                porttitor risus amet sit id.</p>
+                        </div>
 
-                <div class="slide out">
 
-                    <div class="conteudo_slide">
+                        <img src="../images/imagem4.png" alt="" />
 
-                        <h1 class="titulo">Integrity</h1>
-                        <p class="texto">Lorem ipsum dolor sit amet consectetur. Leo platea nunc et turpis congue
-                            integer
-                            ultrices. Nam pulvinar vel sit nulla urna quam elit. Lorem accumsan duis tincidunt nunc. Est
-                            porttitor risus amet sit id.</p>
                     </div>
-
-
-                    <img src="../images/imagem4.png" alt="" />
-
                 </div>
             </div>
+
 
         </section>
 
